Update message colors

--- a/public/themes/lara-light-indigo/theme.css
+++ b/public/themes/lara-light-indigo/theme.css
@@ -5023,7 +5023,7 @@
     border-radius: 6px;
   }
   .p-inline-message.p-inline-message-info {
-    background: #e9e9ff;
+    background: rgba(233, 233, 255, 0.7);
     border: solid #696cff;
     border-width: 0px;
     color: #696cff;
@@ -5032,7 +5032,7 @@
     color: #696cff;
   }
   .p-inline-message.p-inline-message-success {
-    background: #e4f8f0;
+    background: rgba(228, 248, 240, 0.7);
     border: solid #1ea97c;
     border-width: 0px;
     color: #1ea97c;
@@ -5041,7 +5041,7 @@
     color: #1ea97c;
   }
   .p-inline-message.p-inline-message-warn {
-    background: #fff2e2;
+    background: rgba(255, 242, 226, 0.7);
     border: solid #cc8925;
     border-width: 0px;
     color: #cc8925;
@@ -5050,7 +5050,7 @@
     color: #cc8925;
   }
   .p-inline-message.p-inline-message-error {
-    background: #ffe7e6;
+    background: rgba(255, 231, 230, 0.7);
     border: solid #ff5757;
     border-width: 0px;
     color: #ff5757;
@@ -5092,7 +5092,7 @@
     box-shadow: 0 0 0 0.2rem #C7D2FE;
   }
   .p-message.p-message-info {
-    background: #e9e9ff;
+    background: rgba(233, 233, 255, 0.7);
     border: solid #696cff;
     border-width: 0 0 0 6px;
     color: #696cff;
@@ -5104,7 +5104,7 @@
     color: #696cff;
   }
   .p-message.p-message-success {
-    background: #e4f8f0;
+    background: rgba(228, 248, 240, 0.7);
     border: solid #1ea97c;
     border-width: 0 0 0 6px;
     color: #1ea97c;
@@ -5116,7 +5116,7 @@
     color: #1ea97c;
   }
   .p-message.p-message-warn {
-    background: #fff2e2;
+    background: rgba(255, 242, 226, 0.7);
     border: solid #cc8925;
     border-width: 0 0 0 6px;
     color: #cc8925;
@@ -5128,7 +5128,7 @@
     color: #cc8925;
   }
   .p-message.p-message-error {
-    background: #ffe7e6;
+    background: rgba(255, 231, 230, 0.7);
     border: solid #ff5757;
     border-width: 0 0 0 6px;
     color: #ff5757;
@@ -5153,7 +5153,7 @@
   }
 
   .p-toast {
-    opacity: 0.9;
+    opacity: 1;
   }
   .p-toast .p-toast-message {
     margin: 0 0 1rem 0;
@@ -5196,7 +5196,7 @@
     box-shadow: 0 0 0 0.2rem #C7D2FE;
   }
   .p-toast .p-toast-message.p-toast-message-info {
-    background: #e9e9ff;
+    background: rgba(233, 233, 255, 0.7);
     border: solid #696cff;
     border-width: 0 0 0 6px;
     color: #696cff;
@@ -5206,7 +5206,7 @@
     color: #696cff;
   }
   .p-toast .p-toast-message.p-toast-message-success {
-    background: #e4f8f0;
+    background: rgba(228, 248, 240, 0.7);
     border: solid #1ea97c;
     border-width: 0 0 0 6px;
     color: #1ea97c;
@@ -5216,7 +5216,7 @@
     color: #1ea97c;
   }
   .p-toast .p-toast-message.p-toast-message-warn {
-    background: #fff2e2;
+    background: rgba(255, 242, 226, 0.7);
     border: solid #cc8925;
     border-width: 0 0 0 6px;
     color: #cc8925;
@@ -5226,7 +5226,7 @@
     color: #cc8925;
   }
   .p-toast .p-toast-message.p-toast-message-error {
-    background: #ffe7e6;
+    background: rgba(255, 231, 230, 0.7);
     border: solid #ff5757;
     border-width: 0 0 0 6px;
     color: #ff5757;
@@ -5697,5 +5697,9 @@
 
   .p-speeddial-item.p-focus > .p-speeddial-action {
     box-shadow: 0 0 0 2px #ffffff, 0 0 0 4px #b1b3f8, 0 1px 2px 0 black;
+  }
+
+  .p-toast-message {
+    backdrop-filter: blur(10px);
   }
 }
