--- a/assets/styles/layout/_footer.scss
+++ b/assets/styles/layout/_footer.scss
@@ -12,9 +12,14 @@
     a {
         color: var(--primary-color);
         font-weight: 700;
+        transition: all .3s;
+        border-radius: var(--border-radius);
+
+        @include focus-visible();
 
         &:hover {
             text-decoration: underline;
         }
+        
     }
 }
