--- a/assets/styles/layout/_sidebar.scss
+++ b/assets/styles/layout/_sidebar.scss
@@ -39,6 +39,7 @@
                 color: var(--surface-900);
                 font-weight: 600;
                 transition: all .2s;
+                border-radius: var(--border-radius);
 
                 .menu-icon {
                     width: 2rem;
@@ -83,6 +84,8 @@
                         }
                     }
                 }
+
+                @include focus-visible(inset);
             }
             
             > div {
