--- a/assets/styles/layout/_doc.scss
+++ b/assets/styles/layout/_doc.scss
@@ -12,7 +12,7 @@
             background-color: transparent;
             border: 0 none;
             display: block;
-            padding: 1rem 2rem;
+            padding: 0 2rem 1rem 2rem;
             text-align: center;
             color: var(--surface-700);
             font-size: 1rem;
@@ -33,6 +33,8 @@
             &:focus {
                 outline: 0 none;
             }
+
+            @include focus-visible();
         }
 
         &.doc-tabmenu-active {
