Enabled glow on landing

--- a/assets/styles/layout/landing/_main.scss
+++ b/assets/styles/layout/landing/_main.scss
@@ -1,5 +1,5 @@
 .landing {
-    background: var(--home-bg);
+    background-color: var(--home-bg);
     scroll-behavior: smooth;
     padding-top: 4rem;
 
