--- a/assets/styles/layout/_content.scss
+++ b/assets/styles/layout/_content.scss
@@ -9,22 +9,10 @@
     }
 }
 
-.layout-light {
-    .card {
-        background: var(--surface-card);
-        border: 1px solid var(--surface-border);
-        padding: 2rem;
-        border-radius: 10px;
-        margin-bottom: 1rem;
-    }
-}
-
-.layout-dark {
-    .card {
-        background: var(--surface-card);
-        border: 0 none;
-        padding: 2rem;
-        border-radius: 10px;
-        margin-bottom: 1rem;
-    }
+.card {
+    background: var(--surface-card);
+    border: var(--card-border);
+    padding: 2rem;
+    border-radius: 10px;
+    margin-bottom: 1rem;
 }
