--- a/assets/styles/layout/variables/main/_light.scss
+++ b/assets/styles/layout/variables/main/_light.scss
@@ -1,4 +1,5 @@
 .layout-wrapper.layout-light {
+    --topbar-sticky-bg:rgba(255,255,255,.7);
     --card-border: 1px solid var(--surface-border);
     --card-bg: var(--surface-card);
     --glow-image: url(https://www.primefaces.org/cdn/primevue/images/layout/top-pattern-light.png);
@@ -8,4 +9,6 @@
     --demo-code-button-color: var(--surface-400);
     --demo-code-button-hover-bg: rgba(255,255,255,.1);
     --demo-code-button-hover-color: var(--surface-300);
+    --doc-highlight-text-bg: var(--primary-100);
+    --doc-highlight-text-color: var(--primary-900);
 }
