Fixed variable scope, update links

--- a/assets/styles/layout/variables/main/_dark.scss
+++ b/assets/styles/layout/variables/main/_dark.scss
@@ -1,4 +1,4 @@
-.layout-wrapper.layout-dark {
+.layout-dark {
     --topbar-sticky-bg:rgba(0,0,0,.3);
     --card-border: 0 none;
     --card-bg: var(--surface-card);
