Add dark-light transition

--- a/assets/styles/layout/_code.scss
+++ b/assets/styles/layout/_code.scss
@@ -147,6 +147,7 @@ pre[class*="language-"] {
 pre[class*="language-"] {    
     code {
         background: var(--demo-code-bg) !important;
+        transition: background-color .5s, border-color .5s;
     }
 }
 
