--- a/assets/styles/layout/_content.scss
+++ b/assets/styles/layout/_content.scss
@@ -12,6 +12,7 @@
 .card {
     background: var(--surface-card);
     border: var(--card-border);
+    transition: background-color .5s, border-color .5s;
     padding: 2rem;
     border-radius: 10px;
     margin-bottom: 1rem;
