--- a/assets/styles/layout/_core.scss
+++ b/assets/styles/layout/_core.scss
@@ -12,6 +12,7 @@ body {
     color: var(--text-color);
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    transition: background-color .5s;
 }
 
 a {
